feat: correct relativePath behavior

--- a/e2e/fixtures/check-dead-link/doc/zh/guide/basic/quick-start.mdx
+++ b/e2e/fixtures/check-dead-link/doc/zh/guide/basic/quick-start.mdx
@@ -8,7 +8,7 @@
 
 [/guide/basic/install.mdx](/guide/basic/install.mdx)
 
-[/en/guide/basic/install.mdx](/en/guide/basic/install.mdx)
+[/zh/guide/basic/install.mdx](/zh/guide/basic/install.mdx)
 
 ## 相对路径
 
@@ -25,3 +25,11 @@
 [../../api/](../../api/)
 
 [../../api](../../api)
+
+## Corner cases
+
+[/zh](/zh)
+
+[/zh/](/zh/)
+
+[/](/)
