fix: fix snapshot

--- a/e2e/fixtures/markdown-link/doc/guide/index.mdx
+++ b/e2e/fixtures/markdown-link/doc/guide/index.mdx
@@ -14,56 +14,56 @@
 ## RelativeLinks
 
 - [./installation](./installation)
-- [installation(TODO)](installation)
+- [installation](installation)
 
 - [./installation.mdx](./installation.mdx)
-- [installation.mdx(TODO)](installation.mdx).
+- [installation.mdx](installation.mdx).
 
 - [Definition: ./installation]
-- [Definition: installation(TODO)]
+- [Definition: installation]
 
 - [Definition: ./installation.mdx]
-- [Definition: installation.mdx(TODO)]
+- [Definition: installation.mdx]
 
 [Definition: ./installation]: ./installation
-[Definition: installation(TODO)]: installation
+[Definition: installation]: installation
 [Definition: ./installation.mdx]: ./installation.mdx
-[Definition: installation.mdx(TODO)]: installation.mdx
+[Definition: installation.mdx)]: installation.mdx
 
 ## RelativeLinks with subfolders
 
 - [./subfolder/foo](./subfolder/foo)
-- [subfolder/foo(TODO)](subfolder/foo)
+- [subfolder/foo](subfolder/foo)
 
 - [./subfolder/foo.mdx](./subfolder/foo.mdx)
-- [subfolder/foo.mdx(TODO)](subfolder/foo.mdx).
+- [subfolder/foo.mdx](subfolder/foo.mdx).
 
 - [Definition2: ./subfolder/foo]
-- [Definition2: subfolder/foo(TODO)]
+- [Definition2: subfolder/foo]
 
 - [Definition2: ./subfolder/foo.mdx]
-- [Definition2: subfolder/foo.mdx(TODO)]
+- [Definition2: subfolder/foo.mdx]
 
 [Definition2: ./subfolder/foo]: ./subfolder/foo
-[Definition2: subfolder/foo(TODO)]: subfolder/foo
+[Definition2: subfolder/foo]: subfolder/foo
 [Definition2: ./subfolder/foo.mdx]: ./subfolder/foo.mdx
-[Definition2: subfolder/foo.mdx(TODO)]: subfolder/foo.mdx
+[Definition2: subfolder/foo.mdx]: subfolder/foo.mdx
 
 ## RelativeLinks to subfolders index
 
 - [./subfolder](./subfolder)
-- [subfolder(TODO)](subfolder)
+- [subfolder](subfolder)
 
 - [./subfolder/index.mdx](./subfolder/index.mdx)
-- [subfolder/index.mdx(TODO)](subfolder/index.mdx).
+- [subfolder/index.mdx](subfolder/index.mdx).
 
 - [Definition3: ./subfolder]
-- [Definition3: subfolder(TODO)]
+- [Definition3: subfolder]
 
 - [Definition3: ./subfolder/index.mdx]
-- [Definition3: subfolder/index.mdx(TODO)]
+- [Definition3: subfolder/index.mdx]
 
 [Definition3: ./subfolder]: ./subfolder
-[Definition3: subfolder(TODO)]: subfolder
+[Definition3: subfolder]: subfolder
 [Definition3: ./subfolder/index.mdx]: ./subfolder/index.mdx
-[Definition3: subfolder/index.mdx(TODO)]: subfolder/index.mdx
+[Definition3: subfolder/index.mdx]: subfolder/index.mdx
