--- a/e2e/fixtures/markdown-link/doc/guide/index.mdx
+++ b/e2e/fixtures/markdown-link/doc/guide/index.mdx
@@ -28,7 +28,7 @@
 [Definition: ./installation]: ./installation
 [Definition: installation]: installation
 [Definition: ./installation.mdx]: ./installation.mdx
-[Definition: installation.mdx)]: installation.mdx
+[Definition: installation.mdx]: installation.mdx
 
 ## RelativeLinks with subfolders
 
