feat: support FileCodeBlock

--- a/e2e/fixtures/plugin-preview-custom-entry/doc/index.mdx
+++ b/e2e/fixtures/plugin-preview-custom-entry/doc/index.mdx
@@ -12,7 +12,9 @@ export default function HelloWorld() {
 }
 ```
 
-{/* <code src="./Demo.tsx" previewMode="iframe"/> */}
+```tsx file="./component.jsx" iframe
+
+```
 
 ```vue iframe
 <template>
