--- a/e2e/fixtures/plugin-preview/doc/index.mdx
+++ b/e2e/fixtures/plugin-preview/doc/index.mdx
@@ -6,7 +6,9 @@ export default function HelloWorld() {
 }
 ```
 
-{/* <code src="./component.jsx" /> */}
+```jsx file="./component.jsx"
+
+```
 
 ```json
 {
