refactor: no depend on @rspress/shared anymore

--- a/packages/document/docs/en/plugin/official-plugins/llms.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/llms.mdx
@@ -46,7 +46,7 @@ export interface Options {
 - Type: `false | LlmsTxt`
 
 ```ts
-import type { PageIndexInfo } from '@rspress/shared';
+import type { PageIndexInfo } from 'rspress/core';
 
 export interface LlmsTxt {
   name: string;
