--- a/packages/document/docs/zh/plugin/official-plugins/llms.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/llms.mdx
@@ -47,7 +47,7 @@ export interface Options {
 - 类型: `false | LlmsTxt`
 
 ```ts
-import type { PageIndexInfo } from '@rspress/shared';
+import type { PageIndexInfo } from 'rspress/core';
 
 export interface LlmsTxt {
   name: string;
