--- a/packages/document/docs/zh/guide/basic/auto-nav-sidebar.mdx
+++ b/packages/document/docs/zh/guide/basic/auto-nav-sidebar.mdx
@@ -64,46 +64,58 @@ docs
 在侧边栏级别的情况中，你可以在 `_meta.json` 中填入一个数组，数组每一项的类型如下:
 
 ```ts
+export type FileSideMeta = {
+  type: 'file';
+  name: string;
+  label?: string;
+  tag?: string;
+  overviewHeaders?: number[];
+  context?: string;
+};
+
+export type DirSideMeta = {
+  type: 'dir';
+  name: string;
+  label?: string;
+  collapsible?: boolean;
+  collapsed?: boolean;
+  tag?: string;
+  overviewHeaders?: number[];
+  context?: string;
+};
+
+export type DividerSideMeta = {
+  type: 'divider';
+  dashed?: boolean;
+};
+
+export type SectionHeaderMeta = {
+  type: 'section-header';
+  label: string;
+  tag?: string;
+};
+
+export type CustomLinkMeta = {
+  type: 'custom-link';
+  label: string;
+  link?: string;
+  context?: string;
+  tag?: string;
+  items?: CustomLinkMeta[];
+};
+
 export type SideMetaItem =
-  | string
-  | {
-      type: 'file';
-      name: string;
-      label?: string;
-      tag?: string;
-      overviewHeaders?: number[];
-      context?: string;
-    }
-  | {
-      type: 'dir';
-      name: string;
-      label?: string;
-      collapsible?: boolean;
-      collapsed?: boolean;
-      tag?: string;
-      overviewHeaders?: number[];
-      context?: string;
-    }
-  | {
-      type: 'divider';
-      dashed?: boolean;
-    }
-  | {
-      type: 'section-header';
-      label: string;
-      tag?: string;
-    }
-  | {
-      type: 'custom-link';
-      label: string;
-      link: string;
-      context?: string;
-    };
+  | FileSideMeta
+  | DirSideMeta
+  | DividerSideMeta
+  | SectionHeaderMeta
+  | CustomLinkMeta
+  | string;
 ```
 
-### string
+### file
 
-当类型为 `string` 时，表示该项是一个文件，文件名为该字符串，比如:
+- 当类型为 `string` 时，表示该项是一个文件，文件名为该字符串，比如:
 
 ```json
 ["introduction"]
@@ -111,20 +123,19 @@ export type SideMetaItem =
 
 其中文件名可以带后缀，也可以不带后缀，比如 `introduction` 会被解析为 `introduction.mdx`。
 
-### object
-
-当类型为对象形式时，你可以描述为一个文件、目录或者自定义链接。
+- 当类型为对象形式时，你可以描述为一个文件、目录或者自定义链接。
 
 在描述**文件**的情况下，类型如下:
 
 ```ts
-{
+export type FileSideMeta = {
   type: 'file';
   name: string;
   label?: string;
+  tag?: string;
   overviewHeaders?: number[];
   context?: string;
-}
+};
 ```
 
 其中，`name` 表示文件名，同时支持`带`/`不带`后缀，`label` 表示该文件在侧边栏中的显示名称，为可选值，如果未填则会自动取文档中的 h1 标题。`overviewHeaders` 表示该文件在预览页中展示的标题级别，为可选值，默认为 `[2]`。`context` 表示在生成侧边栏时在所在的 DOM 节点添加 `data-context` 属性的值。为可选值，默认不会添加。比如:
@@ -137,18 +148,21 @@ export type SideMetaItem =
 }
 ```
 
+### dir
+
 在描述**目录**的情况下，类型如下:
 
 ```ts
-{
+export type DirSideMeta = {
   type: 'dir';
   name: string;
-  label: string;
+  label?: string;
   collapsible?: boolean;
   collapsed?: boolean;
+  tag?: string;
   overviewHeaders?: number[];
   context?: string;
-}
+};
 ```
 
 其中，`name` 表示目录名，`label` 表示该目录在侧边栏中的显示名称，`collapsible` 表示该目录是否可以折叠，`collapsed` 表示该目录是否默认折叠，`overviewHeaders` 表示该目录下的文件在预览页中展示的标题级别，为可选值，默认为 `[2]`。`context` 表示在生成侧边栏时在所在的 DOM 节点添加 `data-context` 属性的值。为可选值，默认不会添加。比如:
@@ -163,13 +177,15 @@ export type SideMetaItem =
 }
 ```
 
+### divider
+
 在描述**分割线**的情况下，类型如下：
 
 ```ts
-{
+export type DividerSideMeta = {
   type: 'divider';
   dashed?: boolean;
-}
+};
 ```
 
 `dashed` 为 `true` 时表示该分割线是虚线，否则是实线。
@@ -190,13 +206,16 @@ docs
 
 :::
 
+### section-header
+
 在描述**分组标题**的情况下，类型如下:
 
 ```ts
-{
+export type SectionHeaderMeta = {
   type: 'section-header';
   label: string;
-}
+  tag?: string;
+};
 ```
 
 其中，`label` 表示该分组标题在侧边栏中的显示名称，比如:
@@ -228,15 +247,19 @@ docs
 ]
 ```
 
+### custom-link
+
 在描述**自定义链接**的情况下，类型如下:
 
 ```ts
-{
+export type CustomLinkMeta = {
   type: 'custom-link';
   label: string;
-  link: string;
+  link?: string;
   context?: string;
-}
+  tag?: string;
+  items?: CustomLinkMeta[];
+};
 ```
 
 其中，`label` 表示该链接在侧边栏中的显示名称，`link` 表示该链接的跳转地址，比如:
@@ -256,6 +279,27 @@ docs
   "type": "custom-link",
   "link": "https://github.com",
   "label": "GitHub"
+}
+```
+
+同时 custom-link 也支持嵌套链接，比如:
+
+```json
+{
+  "type": "custom-link",
+  "label": "My Link",
+  "items": [
+    {
+      "type": "custom-link",
+      "label": "Sub Link 1",
+      "link": "/sub-link-1"
+    },
+    {
+      "type": "custom-link",
+      "label": "Sub Link 2",
+      "link": "/sub-link-2"
+    }
+  ]
 }
 ```
 
