--- a/packages/document/docs/zh/guide/basic/auto-nav-sidebar.mdx
+++ b/packages/document/docs/zh/guide/basic/auto-nav-sidebar.mdx
@@ -1,6 +1,6 @@
 # 自动生成导航
 
-在 Rspress 中，除了在配置文件中通过 `themeConfig` 声明 [nav](/api/config/config-theme.html#nav) 和 [sidebar](/api/config/config-theme.html#sidebar)， 你也可以通过声明 `_meta.json` 描述文件来自动化生成导航栏和侧边栏，我们更加推荐后者，因为可以使配置文件更加简洁和清晰。
+在 Rspress 中，除了在配置文件中通过 `themeConfig` 声明 [nav](/api/config/config-theme.html#nav) 和 [sidebar](/api/config/config-theme.html#sidebar)， 你也可以通过声明 `_nav.json` 和 `_meta.json` 描述文件来分别自动化生成导航栏和侧边栏，我们更加推荐后者，因为可以使配置文件更加简洁和清晰。
 
 :::tip 提示
 当配置文件 `rspress.config.ts` 中没有 `nav` 和 `sidebar` 配置的情况下，自动化导航栏/侧边栏才会生效。
@@ -12,7 +12,7 @@
 
 ```txt
 docs
-├── _meta.json // 导航栏级别
+├── _nav.json // 导航栏级别
 └── guides
     ├── _meta.json // 侧边栏级别
     ├── introduction.mdx
@@ -26,7 +26,7 @@ docs
 ```txt
 docs
 ├── en
-│   ├── _meta.json // 导航栏级别
+│   ├── _nav.json // 导航栏级别
 │   └── guides
 │       ├── _meta.json // 侧边栏级别
 │       ├── introduction.mdx
@@ -35,7 +35,7 @@ docs
 │           ├── _meta.json // 侧边栏级别
 │           └── plugin-development.md
 └── zh
-    ├── _meta.json // 导航栏级别
+    ├── _nav.json // 导航栏级别
     └── guides
         ├── _meta.json // 侧边栏级别
         ├── introduction.mdx
@@ -45,11 +45,36 @@ docs
             └── plugin-development.md
 ```
 
+## JSON schema 类型提示
+
+为了更好的编辑 `_nav.json` 和 `_meta.json` 文件，Rspress V2 中, 提供了 `rspress/meta-json-schema.json` 和 `rspress/nav-json-schema.json` 两个 schema 文件用于类型提示。
+
+以 VSCode 为例，可以在 `.vscode/settings.json` 中添加如下配置:
+
+```json title=".vscode/settings.json"
+{
+  //...
+  "json.schemas": [
+    {
+      "fileMatch": ["**/_meta.json"],
+      "url": "./node_modules/rspress/meta-json-schema.json"
+      // 或者 "url": "https://unpkg.com/rspress@2.0.0-beta.21/meta-json-schema.json"
+    },
+    {
+      "fileMatch": ["**/_nav.json"],
+      "url": "./node_modules/rspress/nav-json-schema.json"
+      // 或者 "url": "https://unpkg.com/rspress@2.0.0-beta.21/nav-json-schema.json"
+    }
+  ]
+  // ...
+}
+```
+
 ## 导航栏级别配置
 
-在导航栏级别的情况中，你可以在 `_meta.json` 中填入一个数组，其类型跟默认主题的 nav 配置完全一致，详情可以参考 [nav 配置](/api/config/config-theme.html#nav)。比如:
+在导航栏级别的情况中，你可以在 `_nav.json` 中填入一个数组，其类型跟默认主题的 nav 配置完全一致，详情可以参考 [nav 配置](/api/config/config-theme.html#nav)。比如:
 
-```json
+```json title="docs/_nav.json"
 [
   {
     "text": "Guide",
