--- a/packages/document/docs/zh/guide/basic/auto-nav-sidebar.mdx
+++ b/packages/document/docs/zh/guide/basic/auto-nav-sidebar.mdx
@@ -1,6 +1,6 @@
 # 自动生成导航
 
-在 Rspress 中，除了在配置文件中通过 `themeConfig` 声明 [nav](/api/config/config-theme.html#nav) 和 [sidebar](/api/config/config-theme.html#sidebar)， 你也可以通过声明 `_nav.json` 和 `_meta.json` 描述文件来分别自动化生成导航栏和侧边栏，我们更加推荐后者，因为可以使配置文件更加简洁和清晰。
+在 Rspress 中，除了在配置文件中通过 `themeConfig` 声明 [nav](/api/config/config-theme.html#nav) 和 [sidebar](/api/config/config-theme.html#sidebar)， 你也可以通过声明 `_nav.json` 和 `_meta.json` 描述文件来分别自动化生成导航栏和侧边栏，我们更加推荐后者，因为可以使配置文件更加简洁和清晰，并且包含 `themeConfig` 下的全部能力。
 
 :::tip 提示
 当配置文件 `rspress.config.ts` 中没有 `nav` 和 `sidebar` 配置的情况下，自动化导航栏/侧边栏才会生效。
@@ -277,14 +277,29 @@ export type SectionHeaderMeta = {
 在描述**自定义链接**的情况下，类型如下:
 
 ```ts
-export type CustomLinkMeta = {
-  type: 'custom-link';
-  label: string;
-  link?: string;
-  context?: string;
-  tag?: string;
-  items?: CustomLinkMeta[];
-};
+export type CustomLinkMeta =
+  | {
+      // file link
+      type: 'custom-link';
+      label?: string;
+      tag?: string;
+      overviewHeaders?: number[];
+      context?: string;
+      // custom link
+      link: string;
+    }
+  | {
+      // dir link
+      type: 'custom-link';
+      label?: string;
+      tag?: string;
+      overviewHeaders?: number[];
+      context?: string;
+      link: string;
+      collapsible?: boolean;
+      collapsed?: boolean;
+      items?: CustomLinkMeta[]; // for nested custom links, e.g. dropdowns
+    };
 ```
 
 其中，`label` 表示该链接在侧边栏中的显示名称，`link` 表示该链接的跳转地址，比如:
